public/css/styles.css
/* GENERAL */
* {
  font-family: 'Helvetica Neue', Helvetica, sans-serif;
}
html {
  overflow-y: scroll;
  background: #FFF;
}

@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

header, main, #no-results, footer {
  width: 100%;
  margin: 0 auto;
}
main {
  margin-top:1%;
  max-width: 1560px;
  min-height: 360px;
}

#left-column {
  animation: fadein 8s;
  float: left;
  width: 19%;
  padding-left:2%;
}
#right-column {
  animation: fadein 5s;
  width: 67%;
  float:right;
  margin-right:4%;
}

.clear:after {
  content: '';
  display: table;
  clear: both;
}
/*filters*/
#plan {
    margin-top:10%;
    }

.ais-refinement-list--header.ais-header {
    padding-bottom: 5%;
    margin-top: 4%;
}
/* INPUT */
header {
  position: relative;
  height: auto;
  margin-top: 40px;
}
header img {
  animation: fadein 10s;
  float: left;
  max-width: 9%;
}
#search-input input {
  display:block;
  font-size: 28px;
  font-weight: 100;
  width: 83%;
  margin-left: 10%;
  padding: 10px 0 6px;
  border: none;
  border-bottom: 5px solid #eee;
}
#search-input input, #search-input input:focus {
  transition: border-color .3s ease-in;
  outline: 0;
}
#search-input input:focus {
  border-color: #4b71fc;
}
#search-input input::-webkit-input-placeholder, #search-input input:-moz-placeholder, #search-input input:-moz-placeholder, #search-input input:-ms-input-placeholder {
  font-weight: 100;
  color: #999;
}
#search-input-icon {
  position: relative;
}
#search-input-icon:before {
  position: absolute;
  right: 0;
  bottom: 15px;
  width: 20px;
  height: 20px;
  content: '';
  cursor: default;
  background: url(img/search_icon.png) no-repeat;
}
#search-input-icon.empty:before {
  cursor: pointer;
  background-image: url(img/delete_icon.png);
}

/* HITS */
#hits {
  margin: 4px 0;
  padding: 10px 0;
  border-top: 2px solid #eee;
}
.ais-hits--item {
    width:50%;
    display:inline-block;
    }
.hit {
  font-size: 0;
  padding: 8px 0;
  border-bottom: 1px solid #eee;
}
.hit-name {
  display:inline-block;
  margin-bottom:0;
  position:relative;
  font-size: 18px;
  left:12%;
}
.media-object {
  display: inline-block;
  width: 100%;
  height:280px;
  background-size: contain;
  background-repeat: no-repeat;
  border:7px #eee solid;
}
.media-object:hover {
  border-color: #4b71fc;
  transition: border-color .3s ease-in;
}
.hit-image img {
  max-width: 100%;
  max-height: 180px;
}
.hit-content {
  font-size: 13px;
  font-weight: 300;
  display: inline-block;
  width: 83%;
  margin-left: 1%;
  vertical-align: top;
}
.hit-content .hit-price {
  font-size: 20px;
  float: right;
  margin-left: 20px;
  color: #ed5565;
}
.hit-content .hit-price, .hit-content .hit-name {
  font-weight: normal;
  margin-top: 0;
}
.hit-content em {
  font-style: normal;
  background: #fbdde0;
}
.hit-content .hit-description {
  color: #999;
  display:inline-block;
  width:380px;
  float:right;
  margin-top:0px;
}

/* PAGINATION */
#pagination {
  margin-top: 60px;
}
#pagination ul {
  font-size: 0;
  list-style-type: none;
  text-align: center;
  display:inline;
}
#pagination li {
  font-size: 14px;
  display: inline;
  float:left;
}
#pagination a {
  padding: 8px 12px;
  text-decoration: none;
  color: #000;
  border: 1px solid #eee;
}
#pagination a:hover {
  background: #f5f5f5;
}
#pagination li:first-child a {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}
#pagination li:last-child a {
  border-right: 1px solid #eee;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}
#pagination li.ais-pagination--item__active a {
  color: white;
  border-color: #ed5565;
  background: #ed5565;
}
#pagination li.ais-pagination--item__active a:hover {
  cursor: default;
}
#pagination li.ais-pagination--item__disabled a {
  cursor: not-allowed;
}
#pagination li.ais-pagination--item__disabled a:hover {
  background: none;
}

/* SORT BY */
#sort-by-wrapper {
  font-weight: 300;
  position: relative;
  float: right;
  color: #999;
}

#sort-by select {
  font-size: 16px;
  padding-right: 14px;
  cursor: pointer;
  border: none;
  outline: none;
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

#sort-by:after {
  content: "";
  display: inline-block;
  position: absolute;

  top: 8px;
  right: 0;

  width: 0;
  height: 0;

  margin-left: 2px;
  vertical-align: middle;

  color: #000;
  border-top: 4px dashed;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;

  pointer-events: none;
}

/* STATS */
#stats {

}

#stats .ais-stats--time {
  font-size: 0.8em;
  color: #999;
}


#objectid-hidden {
    display:none;
}



/* FACETS */
.facet {
  margin-bottom: 24px;
}
.facet h5 {
  margin: 0 0 6px;
  padding: 0 0 6px;
  text-transform: uppercase;
  border-bottom: 2px solid #eee;
}
.facet ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
.facet li {
  margin-bottom: 3px;
}
.ais-refinement-list--label,
.ais-menu--link {
  font-size: 13px;
  line-height: 1.6;
  text-decoration: none;
  color: #000;
  cursor: pointer;
  vertical-align:top;
}
.ais-refinement-list--label:hover, .ais-refinement-list--item__active .ais-refinement-list--label,
.ais-menu--link:hover, .ais-menu--item__active .ais-menu--link {
  color: #ed5565;
}
.ais-refinement-list--item__active .ais-refinement-list--label:hover,
.ais-menu--item__active .ais-menu--link:hover {
  text-decoration: line-through;
  color: #ed5565;
}
.ais-refinement-list--count,
.ais-menu--count {
  position: relative;
  top: 3px;
  float: right;
  color: #999;
}

#type.facet .ais-refinement-list--checkbox {
  display: none;
}

/* NO RESULTS */
.no-results #pagination, .no-results #sort-by, .no-results #stats, .no-results #facets {
  display: none;
}
#no-results-message {
  text-align: center;
}
#no-results-message p {
  font-size: 28px;
  font-weight: 100;
}
#no-results-message ul {
  list-style-type: none;
}
#no-results-message li {
  font-size: 12px;
  position: relative;
  display: inline-block;
  margin: 4px 2px;
  padding: 4px 28px 4px 8px;
  color: #999;
  border: 1px solid #ddd;
  border-radius: 12px;
}
#no-results-message li span.value {
  font-weight: bold;
  color: #000;
}
#no-results-message li a.remove img {
  position: absolute;
  top: 3px;
  right: 5px;
  float: right;
  width: 17px;
  height: 17px;
  opacity: .5;
}
#no-results-message li a.remove:hover img {
  opacity: 1;
}
a.clear-all {
  font-size: 12px;
  line-height: 1;
  display: inline-block;
  margin: 10px;
  padding: 8px 12px;
  text-decoration: none;
  color: black;
  border: 2px solid #ddd;
  border-radius: 4px;
}
a.clear-all:hover {
  transition: border-color .3s ease-in;
  border-color: #999;
}

/* SLIDER */
.ais-range-slider--target {
  margin: 40px 30px 40px 0;
  font-size: 13px;
}

.ais-range-slider--connect {
  background: #ed5565;
}

.ais-range-slider--handle {
  border-color: #ed5565;
}

/* FOOTER */
footer {
  font-size: 14px;
  margin-top: 200px;
  margin-bottom: 24px;
  text-align: center;
}
footer a {
  text-decoration: none;
  color: #ed5565;
}
footer a:hover {
  text-decoration: underline;
  color: #ed5565;
}

/*tags*/
#tags {
  float:right;
}

.tag-items:empty {
  visibility:hidden;
}

.tag-items {
  background-color: lightblue;
  border: 4px lightblue solid;
}

.tag-items, .tagslist {
    display:inline;
    }
.add-tag {
    display:none; /* remove to show add tag button */
    margin-left:2%;
    }
.addsometags {
    display:inline;
    }

/*updown vote*/

div.upvote {
    text-align: center;
}

div.upvote a.upvote-enabled {
    cursor: pointer;
}

div.upvote a {
    color: transparent;
    background-image: url('images/sprites-stackoverflow.png?v=1');
    background-repeat: no-repeat;
    overflow: hidden;
    display: block;
    margin: 0 auto;
    width: 41px;
    height: 25px;
}

div.upvote span.count {
    display: block;
    font-size: 24px;
    font-family: Arial, Liberation, Sans, DejaVu Sans, sans-serif;
    color: #555;
    text-align: center;
    line-height: 1;
}

div.upvote a.upvote {
    background-position: 0px -265px;
}

div.upvote a.upvote.upvote-on {
    background-position: 0px -230px;
}

div.upvote a.downvote {
    background-position: 0px -300px;
}

div.upvote a.downvote.downvote-on {
    background-position: 0px -330px;
}

div.upvote a.star {
    width: 33px;
    height: 31px;
    background-position: 0px -150px;
}

div.upvote a.star.star-on {
    background-position: 0px -190px;
}

div.upvote-serverfault a {
    background-image: url('images/sprites-serverfault.png?v=1');
}

div.upvote-meta-stackoverflow a {
    background-image: url('images/sprites-meta-stackoverflow.png?v=1');
}

div.upvote-superuser a.upvote {
    background-image: url('//www.buttstore.net/content/sprites-superuser.png');
}

div.upvote-superuser a.downvote {
    background-image: url('//www.buttstore.net/content/sprites-superuser.png');
}

a.upvote {
    height:26px;
    width:42px;
    display:block;
    background-position-y:-260px;
}
a.upvote:hover {
    height: 26px;
    width: 42px;
    display: block;
    background-position-y: -228px;
}

a.downvote{
    height:26px;
    width:42px;
    display:block;
    background-position-y: -299px;
    margin-top:-6px;
    }

a.downvote:hover{
    height: 26px;
    width: 42px;
    display: block;
    background-position-y: -326px;
    margin-top: -6px;
}

a { color: #4b71fa; text-decoration: none; }
a:hover { color: #4b71fc; text-decoration: underline; }

.upvotesuperuser {
    display: inline-block;
    height: 60px;
    float: left;
    margin-top: -6%;
}

#rating {
  width:42px;
  display:inline-block;
  float:left;
  margin-left: 2%;
  position:relative;
  top:-20px;
  }


#feedback {
    display: inline-block;
    position: fixed;
    top: 300px;
    margin-right:-2.3%;
    right:0;
    transform: rotate(270deg);
    background-color: #4b71fa;
}
#feedback > a {
  position:relative;
  color: white;
  font-size: 17px;
  padding: 5px;
}

div.count {
  width: 40px;
  display: block;
  text-align: center;
}
.ais-refinement-list--item__active .ais-refinement-list--label:hover, .ais-menu--item__active .ais-menu--link:hover {
  color:#4b71fa;
}
.ais-refinement-list--label:hover, .ais-refinement-list--item__active .ais-refinement-list--label, .ais-menu--link:hover, .ais-menu--item__active .ais-menu--link {
  color:#4b71fa;
}


#industry .ais-refinement-list--item:nth-of-type(1),
#industry .ais-refinement-list--item:nth-of-type(3),
#industry .ais-refinement-list--item:nth-of-type(25),
#industry .ais-refinement-list--item:nth-of-type(26) {
    display: none;
}

